--- a/src/lib/css/global.css
+++ b/src/lib/css/global.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap');
+
+/* VARIABLES */
+:root {
+  --title-font: 'MedievalSharp', cursive;
+}
+
 /* RESETS */
 
 * {
@@ -9,6 +16,15 @@
 html {
   font-size: 62.5%;
   background-color: gray;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--title-font);
 }
 
 ul {
