--- a/src/lib/css/global.css
+++ b/src/lib/css/global.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
 /* VARIABLES */
 :root {
   --title-font: 'MedievalSharp', cursive;
   --bg-page: #e4e4e4;
   --bg-nav: #c0c0c0;
+  --white: #eeeeee;
+  --black: #1b1b1b;
 }
 
 /* RESETS */
@@ -18,6 +21,7 @@
 html {
   font-size: 62.5%;
   background-color: var(--bg-page);
+  font-family: 'Roboto', sans-serif;
 }
 
 h1,
@@ -31,4 +35,20 @@ h6 {
 
 ul {
   list-style-type: none;
+}
+
+a:link,
+a:visited {
+  color: blue;
+  text-decoration: none;
+}
+
+/* UTILITIES */
+a.btn,
+.btn {
+  display: inline-block;
+  padding: 1rem 2rem;
+  border-radius: 5px;
+  background-color: var(--black);
+  color: var(--white);
 }
