--- a/src/lib/css/global.css
+++ b/src/lib/css/global.css
@@ -5,7 +5,7 @@
 :root {
   --title-font: 'MedievalSharp', cursive;
   --bg-page: #e4e4e4;
-  --bg-nav: #c0c0c0;
+  --bg-nav: #444444;
   --white: #eeeeee;
   --black: #1b1b1b;
 }
